# Shipment-Automation

./: MANIFEST.in  README.md  hooks.py  package.json  pyproject.toml  setup.py  test.py
shipment_automation/: hooks.py  modules.txt
shipment_automation/automation/doctype/shipment_import/: shipment_import.json
shipment_automation/doctype/shipment_import/: shipment_import.js  shipment_import.json  shipment_import.py
shipment_automation/public/: .gitkeep  build.json
shipment_automation/public/js/: shipment_automation.js
shipment_automation/shipment_automation/: __init__.py  utils.py
shipment_automation/shipment_automation/doctype/: __init__.py
shipment_automation/shipment_automation/doctype/bulk_bom_import/: bulk_bom_import.js  bulk_bom_import.json  bulk_bom_import.py
shipment_automation/shipment_automation/doctype/bulk_customer_import/: bulk_customer_import.js  bulk_customer_import.json  bulk_customer_import.py
shipment_automation/shipment_automation/doctype/bulk_delivery_note_import/: bulk_delivery_note_import.js  bulk_delivery_note_import.json  bulk_delivery_note_import.py
shipment_automation/shipment_automation/doctype/bulk_employee_import/: bulk_employee_import.js  bulk_employee_import.json  bulk_employee_import.py
shipment_automation/shipment_automation/doctype/bulk_item_import/: bulk_item_import.js  bulk_item_import.json  bulk_item_import.py
shipment_automation/shipment_automation/doctype/bulk_journal_entry_import/: bulk_journal_entry_import.js  bulk_journal_entry_import.json  bulk_journal_entry_import.py
(+37 files in other folders)
