[project]
name = "shipment_automation"
authors = [
    { name = "NexGen ERP Technologies", email = "admin@nexgenerp.com"}
]
description = "Automated Import Shipment Processing"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "openpyxl"
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
