[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shipment_automation"
version = "0.0.1"
description = "Automated Import Shipment Processing"
authors = [
    { name = "NexGen ERP Technologies", email = "admin@nexgenerp.com"}
]
dependencies = [
    "openpyxl"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shipment_automation*"]
