[project]
name = "shipment_automation"
authors = [
    { name = "NexGen ERP Technologies", email = "admin@nexgenerp.com"}
]
description = "Automated Import Shipment Processing"
version = "0.0.1"
dependencies = [
    "openpyxl"
]

[tool.bench]
app_title = "Shipment Automation"
app_publisher = "NexGen ERP Technologies"
app_description = "Automated Import Shipment Processing"
app_email = "admin@nexgenerp.com"
app_license = "MIT"

[tool.setuptools.packages.find]
where = ["."]
include = ["shipment_automation*"]
